Fixed leaderboard design, so we can scroll and all boards visible

--- a/src/main/webapp/resources/icancode/css/style.css
+++ b/src/main/webapp/resources/icancode/css/style.css
@@ -123,21 +123,8 @@ ul {
   white-space: nowrap;
 }
 
-.main {
-  transition: padding 1s;
-  margin-top: 15px; 
-  padding: 0 15px 0 565px; 
-  position: relative;
-}
-
 .main.editor-fullscreen {
   padding-left: 15px;
-}
-
-.game {
-  background-position: center;
-  position: absolute; 
-  left: 15px;
 }
 
 .main-block {
@@ -164,13 +151,6 @@ ul {
   background-color: #323132;
   border: 1px solid #5c5b5d;
   padding-left: 20px;
-}
-
-.board {
-  position: relative;
-  width: 100%;
-  box-sizing: border-box;
-  color: #fff;
 }
 
 .board-title {
@@ -736,11 +716,6 @@ a.modalCloseImg {
   vertical-align: middle;
 }
 
-.player-canvas {
-  height: 550px;
-  float: none;
-}
-
 .player-canvas table {
   margin: 0 auto;
 }
@@ -846,11 +821,6 @@ canvas {
 
 .modal-bg.close {
   display: none;
-}
-
-.leader {
-  transition: none;
-  padding-left: 600px;
 }
 
 .admin-main {
@@ -981,7 +951,7 @@ canvas {
     text-align: center;
     padding-left: 15px;
   }
-  
+
   .console {
     width: 250px;
   }
